# drune

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  exemplo.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: cli.md  configuration.md  engines.md  getting_started.md  index.md  pipelines.md
docs/api_reference/: core.md  engines.md  index.md  models.md
examples/: drune.yml
examples/data/: customer.csv  product.csv  sales.csv
examples/glossary/: example.yml
examples/pipelines/customer/: model.yml  steps.yml
src/drune/: __init__.py
src/drune/cli/: __init__.py  main.py
src/drune/core/: __init__.py  drune.py  engine.py  metadata.py  pipeline.py  quality.py  state.py  step.py
src/drune/engines/: __init__.py
src/drune/models/: __init__.py  pipeline_model.py  project_model.py  pydantic_models.py  quality_model.py
src/drune/utils/: __init__.py  exceptions.py  logger.py  parsers.py
tests/: conftest.py  test_cli.py  test_engine.py  test_models.py  test_pipeline.py  test_quality.py  test_step.py
tests/cli/: test_cli.py  test_cli_integration.py  test_cli_integration_advanced.py
tests/cli/test_files/: input_basic.csv  input_complex.csv  input_nulls.csv  input_pk_mista.csv  input_reserved.csv  input_transform.csv  input_types.csv  pipeline_basic.yml  pipeline_complex.yml  pipeline_missing_col.yml  pipeline_nulls.yml  (+5 more)
tests/core/: test_engine.py  test_pipeline.py  test_quality.py  test_step.py
tests/models/: test_pydantic_models.py
(+46 files in other folders)
